--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input type="text" id="fname" name="fname"><br>
     <label for="pwd">Contraseña:</label><br>
     <input type="password" id="pwd" name="pwd"><br><br>
-    <input type="Submit" value="Iniciar">
+    <input type="Submit" value="Ingresar">
   </fieldset>
 </form>
 
