creación y consulta productos
modificación, agregación de productos y creación de productos

--- a/Sprint2/HMTL/Consultapedidos.html
+++ b/Sprint2/HMTL/Consultapedidos.html
@@ -23,12 +23,12 @@
         <h2>Consulta de pedidos</h2>
 
         <form action="#"></form>
-        <label for="fname">Id Usuario:</label>
-        <input type="number" id="fname" size="15" value="Digite Cedula ID">
+        <label for="idusuario">Id Usuario:</label>
+        <input type="text" id="idusuario" size="15" value="Digite Cedula ID">
         <br>
 
-        <label for="fname">N° Pedido:</label>
-        <input type="password" id="fname" size="15">
+        <label for="numeropedido">N° Pedido:</label>
+        <input type="text" id="numeropedido" size="15" value="Digite N° pedido">
         <br>
         <br>
         <input type="submit" value="Consultar">
