--- a/Sprint2/HMTL/productos.html
+++ b/Sprint2/HMTL/productos.html
@@ -1,59 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Product App</title>
-    <!-- Bootswatch Cosmo Theme -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/cosmo/bootstrap.min.css">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href=".../main.css/App.css">
+    <title>Productos</title>
 </head>
 
 <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Products App</a>
-    </nav>
-
-
-    <div class="container">
-        <!-- APPLICATION -->
-        <div id="App" class="row pt-5">
-
-            <!-- FORM -->
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-header">
-                        <h4>Agregar un producto</h4>
-                    </div>
-                    <form id="product-form" class="card-body">
-                        <div class="form-group">
-                            <input type="text" id="name" placeholder="Product Name" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <input type="number" id="price" step="0.01" placeholder="Product Price" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <input type="number" id="year" min="1900" max="2099" step="1" value="2018" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <input type="number" id="image" min="1900" max="2099" step="1" value="#" class="form-control">
-                        </div>
-                        <input type="submit" value="Save" class="btn btn-primary btn-block">
-                    </form>
-                </div>
-            </div>
-
-            <!-- PRODUCTS LIST -->
-            <div id="product-list" class="col-md-8"></div>
-        </div>
+    <div style="clear: both">
+        <img src="img/logo_pedidos.png" alt="img/no-image.png" width="120" height="60" style="float: left">
+        <h1 style="text-align:center">RappiPedidosGrp5</h1>
+      </div>
+      <br>
+      <br>
+      <ul>
+        <li><a href="principal.html">Principal</a></li>
+        <li><a href="#">Usuario</a></li>
+        <li><a href="#">Producto</a></li>
+        <li>Pedido
+            <ul>
+                <li><a href="pedidos.html">Pedido</a></li>
+                <li><a href="crearpedido.html">Crear Pedido</a></li>
+                <li><a href="modificarpedido.html">Modificar Pedido</a></li>
+                <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
+                <li><a href="consultaReporte.html">Reporte Pedido</a></li>
+            </ul>
+        </li>
+    </ul>
+    <div>
+      <h2>Consulta de productos</h2>
+      <form action="#"></form>
+      <label for="idproducto">código producto :</label>
+      <input type="text" id="idproducto" size="15" value="Digite ID producto">
+      <br>
+      <label for="nombreproducto">Nombre del producto:</label>
+      <input type="text" id="nombreproducto" size="30" value="Digite nombre producto">
+      <br>
+      <br>
+      <input type="submit" value="Consultar">
+      </form>
     </div>
+    <br>
+    <br>
+   
+    <table border="3">
+        <thead>
+            <tr>
+              <th>imagen</th>
+                <th>Código Producto</th>
+                <th>Nombre Producto</th>
+                <th>Estado</th>
+                <th>Cantidad</th>
+                <th>Costo Unitario</th>
+                <th>Costo Total</th>
+                <th>Precio Unitario</th>
+                <th>Precio Total</th>
+                
 
-    <script src="../js/App.js" type="module"></script>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+              <td><img src="#" alt="imagen" width="60"></td>
+                <td>00000000001</td>
+                <td>Martillo 13 onzas</td>
+                <td>Activo</td>
+                <td>10</td>
+                <td>6000</td>
+                <td>60000</td>
+                <td>11000</td>
+                <td>110000</td>
+            
+            </tr>
+        </tbody>
+    </table>  
+    <br>
+    <br>
+    <br>
+    <input type="submit" value="imprimir">
+    <input type="submit" value="cerrar"> 
+
 </body>
 
 </html>
