--- a/Sprint2/HMTL/crearpedido.html
+++ b/Sprint2/HMTL/crearpedido.html
@@ -98,7 +98,7 @@
         <input type="hidden" />
       </form>
       <br />
-      <table>
+      <table border="3">
         <tr>
           <th>Código</th>
           <th>Nombre Producto</th>
