--- a/Sprint2/HMTL/pedidos.html
+++ b/Sprint2/HMTL/pedidos.html
@@ -29,7 +29,7 @@
   <body>
     <h2>Listado de Ordenes de Pedido</h2>
     <div>
-      <table>
+      <table border="3">
         <tr>
           <th>N° pedido</th>
           <th>Fecha</th>
