--- a/Sprint2/HMTL/productos.html
+++ b/Sprint2/HMTL/productos.html
@@ -40,6 +40,7 @@
       <br>
       <br>
       <input type="submit" value="Consultar">
+      <input type="submit" value="Nuevo Producto">
       </form>
     </div>
     <br>
