--- a/Sprint2/HMTL/Consultapedidos.html
+++ b/Sprint2/HMTL/Consultapedidos.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Consultar Pedidos</title>
+</head>
 <body>
     <div style="clear: both">
         <img src="img/logo_pedidos.png" alt="img/no-image.png" width="120" height="60" style="float: left">
@@ -7,8 +15,8 @@
       <br>
       <ul>
         <li><a href="principal.html">Principal</a></li>
-        <li><a href="#">Usuario</a></li>
-        <li><a href="#">Producto</a></li>
+        <li><a href="creaciondeusu.html">Usuario</a></li>
+        <li><a href="productos.html">Producto</a></li>
         <li>Pedido
             <ul>
                 <li><a href="pedidos.html">Pedido</a></li>
@@ -18,7 +26,7 @@
                 <li><a href="consultaReporte.html">Reporte Pedido</a></li>
             </ul>
         </li>
-    </ul>
+      </ul>
     <div>
         <h2>Consulta de pedidos</h2>
 
@@ -65,5 +73,4 @@
     <input type="submit" value="imprimir">
     <input type="submit" value="cerrar"> 
 </body>
-
 </html>
