--- a/Sprint2/HMTL/principal.html
+++ b/Sprint2/HMTL/principal.html
@@ -16,8 +16,8 @@
   <br>
   <ul>
     <li><a href="principal.html">Principal</a></li>
-    <li><a href="#">Usuario</a></li>
-    <li><a href="#">Producto</a></li>
+    <li><a href="creaciondeusu.html">Usuario</a></li>
+    <li><a href="productos.html">Producto</a></li>
     <li>Pedido
         <ul>
             <li><a href="pedidos.html">Pedido</a></li>
@@ -27,7 +27,7 @@
             <li><a href="consultaReporte.html">Reporte Pedido</a></li>
         </ul>
     </li>
-</ul>
+  </ul>
   <!-- <nav>
     <p><a href="principal.html">Principal</a> | <a href="#">Usuario</a> | <a href="#">Producto</a> | <a href="pedidos.html">Pedido</a></p>
   </nav> -->
