--- a/Sprint2/HMTL/productos.html
+++ b/Sprint2/HMTL/productos.html
@@ -17,8 +17,8 @@
       <br>
       <ul>
         <li><a href="principal.html">Principal</a></li>
-        <li><a href="#">Usuario</a></li>
-        <li><a href="#">Producto</a></li>
+        <li><a href="creaciondeusu.html">Usuario</a></li>
+        <li><a href="productos.html">Producto</a></li>
         <li>Pedido
             <ul>
                 <li><a href="pedidos.html">Pedido</a></li>
@@ -28,7 +28,7 @@
                 <li><a href="consultaReporte.html">Reporte Pedido</a></li>
             </ul>
         </li>
-    </ul>
+      </ul>
     <div>
       <h2>Consulta de productos</h2>
       <form action="#"></form>
