--- a/Sprint2/HMTL/creaciondeusu.html
+++ b/Sprint2/HMTL/creaciondeusu.html
@@ -1,45 +1,56 @@
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Creacion de Usuarios</title>
+</head>
 <body>
-
-    <header>
-        <img src="#" alt="#">
-        <img src="#" alt="">
-    </header>
-        <H2>RappipedidoGrd5</H2>
-        <ul>
-            <li><a href="principal.html">Principal</a></li>
-            <li><a href="#">Usuario</a></li>
-            <li><a href="#">Producto</a></li>
-            <li>Pedido
-                <ul>
-                    <li><a href="pedidos.html">Pedido</a></li>
-                    <li><a href="crearpedido.html">Crear Pedido</a></li>
-                    <li><a href="modificarpedido.html">Modificar Pedido</a></li>
-                    <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
-                    <li><a href="consultaReporte.html">Reporte Pedido</a></li>
-                </ul>
-            </li>
-        </ul>
-            </nav>
+    <div style="clear: both">
+        <img src="img/logo_pedidos.png" alt="img/no-image.png" width="120" height="60" style="float: left">
+        <h1 style="text-align:center">RappiPedidosGrp5</h1>
+      </div>
+      <br>
+      <br>
+      <ul>
+        <li><a href="principal.html">Principal</a></li>
+        <li><a href="creaciondeusu.html">Usuario</a></li>
+        <li><a href="productos.html">Producto</a></li>
+        <li>Pedido
+            <ul>
+                <li><a href="pedidos.html">Pedido</a></li>
+                <li><a href="crearpedido.html">Crear Pedido</a></li>
+                <li><a href="modificarpedido.html">Modificar Pedido</a></li>
+                <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
+                <li><a href="consultaReporte.html">Reporte Pedido</a></li>
+            </ul>
+        </li>
+      </ul>
+    </nav>
     <div>
-
-        <h2><select name="estado" id="estado">
-        <option value="pendiente">usuario</option>
-        </select></h2>
-
+        <p>
+            <label for="estado">Tipo de usuario:</label>    
+            <select name="estado" id="estado">
+                <option value="pendiente">Usuario</option>
+                <option value="pendiente">Administrador</option>
+            </select>
+        </p>
         <form action="#"></form>
-        <label for="fname">Identificacion:</label>
+        <label for="fname">No. identificación:</label>
         <input type="number" id="fname" size="15" value="Digite Cedula ID">
         <br>
-        <label for="fname">Nombre: </label>
+        <label for="fname">Nombres: </label>
         <input type="password" id="fname" size="15">
         <br>
-        <label for="fname">Apellido: </label>
+        <label for="fname">Apellidos: </label>
         <input type="password" id="fname" size="15">
         <br>
         <label for="fname">Telefono: </label>
         <input type="password" id="fname" size="15">
         <br>
-        <label for="fname">correo: </label>
+        <label for="fname">Correo electronico: </label>
         <input type="password" id="fname" size="15">
         <br>
         <label for="fname">Usuario: </label>
@@ -51,9 +62,7 @@
         <br>
         <br>
         <br>
-    <input type="submit" value="Crear">
-    <input type="submit" value="Editar"> 
+        <input type="submit" value="Crear">
+        <input type="submit" value="Editar">
 </body>
-
 </html>
-
