--- a/Sprint2/HMTL/modificarpedido.html
+++ b/Sprint2/HMTL/modificarpedido.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Modificar Pedido</title>
-  </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Modificar Pedido</title>
+</head>
+<body>
   <div style="clear: both">
     <img src="img/logo_pedidos.png" alt="img/no-image.png" width="120" height="60" style="float: left">
     <h1 style="text-align:center">RappiPedidosGrp5</h1>
@@ -14,118 +16,80 @@
   <br>
   <ul>
     <li><a href="principal.html">Principal</a></li>
-    <li><a href="#">Usuario</a></li>
-    <li><a href="#">Producto</a></li>
+    <li><a href="creaciondeusu.html">Usuario</a></li>
+    <li><a href="productos.html">Producto</a></li>
     <li>Pedido
-        <ul>
-            <li><a href="pedidos.html">Pedido</a></li>
-            <li><a href="crearpedido.html">Crear Pedido</a></li>
-            <li><a href="modificarpedido.html">Modificar Pedido</a></li>
-            <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
-            <li><a href="consultaReporte.html">Reporte Pedido</a></li>
-        </ul>
+      <ul>
+        <li><a href="pedidos.html">Pedido</a></li>
+        <li><a href="crearpedido.html">Crear Pedido</a></li>
+        <li><a href="modificarpedido.html">Modificar Pedido</a></li>
+        <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
+        <li><a href="consultaReporte.html">Reporte Pedido</a></li>
+      </ul>
     </li>
-</ul>
-  <body>
-    <h2>Modificación de pedido</h2>
-    <hr />
-    <div>
-      <form action="#">
-        <label for="idpedido">ID Pedido:</label>
-        <input
-          type="text"
-          id="idpedido"
-          maxlength="11"
-          name="Id Pedido"
-          disabled
-        />
-        <br /><br />
-        <label for="fechapedido">Fecha Pedido:</label>
-        <input type="date" name="fechapedido" id="fechapedido" required />
-        <label for="idusuario">ID Usuario:</label>
-        <input
-          type="text"
-          id="idusuario"
-          maxlength="20"
-          placeholder="Escribir número de cédula"
-          name="id usuario"
-          disabled
-          required
-        />
-        <label for="nombreusuario">Nombre Usuario:</label>
-        <input
-          type="text"
-          id="nombreusuario"
-          maxlength="120"
-          name="nombre usuario"
-          disabled
-          required
-        />
-        <label for="apellidousuario">Apellido Usuario:</label>
-        <input
-          type="text"
-          id="apellidousuario"
-          maxlength="120"
-          name="apellido usuario"
-          disabled
-          required
-        />
-        <label for="direccion">Dirección pedido:</label>
-        <input
-          type="text"
-          id="direccion"
-          maxlength="20"
-          placeholder="Escribir dirección"
-          name="direccion"
-          disabled
-          required
-        />
-        <label for="estado">Estado pedido:</label>
-        <select name="estado" id="estado">
-          <option value="pendiente">Pendiente</option>
-
-          <option value="entregado">Entregado</option>
-
-          <option value="cancelado">Cancelado</option>
-        </select>
-      </form>
-    </div>
-
-    <div>
-      <h2>Buscar Productos</h2>
-      <form action="#">
-        <input type="search" />
-        <button type="submit">Buscar Producto</button>
-        <input type="hidden" />
-      </form>
-      <br />
-      <table border="3">
-        <tr>
-          <th>Código</th>
-          <th>Nombre Producto</th>
-          <th>Cantidad</th>
-          <th>Valor Unitario</th>
-          <th>Subtotal</th>
-          <th>Acción</th>
-        </tr>
-        <tr>
-          <td>00000000001</td>
-          <td>Motosierra</td>
-          <td>1</td>
-          <td>150000</td>
-          <td>150000</td>
-          <td>
-            <input type="submit" value="Eliminar" />
-          </td>
-        </tr>
-      </table>
-      <br />
-      <label for="total">Total:</label>
-      <input type="text" id="total" name="total" disabled />
+  </ul>
+  <h2>Modificación de pedido</h2>
+  <hr />
+  <div>
+    <form action="#">
+      <label for="idpedido">ID Pedido:</label>
+      <input type="text" id="idpedido" maxlength="11" name="Id Pedido" disabled />
       <br /><br />
-      <input type="submit" value="Imprimir" />
-      <input type="submit" value="Modificar Pedido" />
-      <input type="submit" value="Cancelar Modificación" />
-    </div>
-  </body>
+      <label for="fechapedido">Fecha Pedido:</label>
+      <input type="date" name="fechapedido" id="fechapedido" required />
+      <label for="idusuario">ID Usuario:</label>
+      <input type="text" id="idusuario" maxlength="20" placeholder="Escribir número de cédula" name="id usuario"
+        disabled required />
+      <label for="nombreusuario">Nombre Usuario:</label>
+      <input type="text" id="nombreusuario" maxlength="120" name="nombre usuario" disabled required />
+      <label for="apellidousuario">Apellido Usuario:</label>
+      <input type="text" id="apellidousuario" maxlength="120" name="apellido usuario" disabled required />
+      <label for="direccion">Dirección pedido:</label>
+      <input type="text" id="direccion" maxlength="20" placeholder="Escribir dirección" name="direccion" disabled
+        required />
+      <label for="estado">Estado pedido:</label>
+      <select name="estado" id="estado">
+        <option value="pendiente">Pendiente</option>
+        <option value="entregado">Entregado</option>
+        <option value="cancelado">Cancelado</option>
+      </select>
+    </form>
+  </div>
+  <div>
+    <h2>Buscar Productos</h2>
+    <form action="#">
+      <input type="search" />
+      <button type="submit">Buscar Producto</button>
+      <input type="hidden" />
+    </form>
+    <br />
+    <table border="3">
+      <tr>
+        <th>Código</th>
+        <th>Nombre Producto</th>
+        <th>Cantidad</th>
+        <th>Valor Unitario</th>
+        <th>Subtotal</th>
+        <th>Acción</th>
+      </tr>
+      <tr>
+        <td>00000000001</td>
+        <td>Motosierra</td>
+        <td>1</td>
+        <td>150000</td>
+        <td>150000</td>
+        <td>
+          <input type="submit" value="Eliminar" />
+        </td>
+      </tr>
+    </table>
+    <br />
+    <label for="total">Total:</label>
+    <input type="text" id="total" name="total" disabled />
+    <br /><br />
+    <input type="submit" value="Imprimir" />
+    <input type="submit" value="Modificar Pedido" />
+    <input type="submit" value="Cancelar Modificación" />
+  </div>
+</body>
 </html>
