--- a/Sprint2/HMTL/Consultapedidos.html
+++ b/Sprint2/HMTL/Consultapedidos.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Productos</title>
+</head>
+
 <body>
     <div style="clear: both">
         <img src="img/logo_pedidos.png" alt="img/no-image.png" width="120" height="60" style="float: left">
@@ -5,20 +15,22 @@
       </div>
       <br>
       <br>
-      <ul>
-        <li><a href="principal.html">Principal</a></li>
-        <li><a href="#">Usuario</a></li>
-        <li><a href="#">Producto</a></li>
-        <li>Pedido
-            <ul>
-                <li><a href="pedidos.html">Pedido</a></li>
-                <li><a href="crearpedido.html">Crear Pedido</a></li>
-                <li><a href="modificarpedido.html">Modificar Pedido</a></li>
-                <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
-                <li><a href="consultaReporte.html">Reporte Pedido</a></li>
-            </ul>
-        </li>
-    </ul>
+      <nav class="navegacion">
+        <ul class="menu">
+            <li><a href="principal.html">Principal</a></li>
+            <li><a href="creaciondeusu.html">Usuario</a></li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a href="pedidos.html">Pedidos</a>
+                <ul class="submenu">
+                    <li><a href="crearpedido.html">Crear Pedido</a></li>
+                    <li><a href="modificarpedido.html">Modificar Pedido</a></li>
+                    <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
+                    <li><a href="consultaReporte.html">Reporte Pedido</a></li>
+                </ul>
+            </li>
+        </ul>
+      </nav>
+
     <div>
         <h2>Consulta de pedidos</h2>
 
@@ -63,7 +75,10 @@
     <br>
     <br>
     <input type="submit" value="imprimir">
-    <input type="submit" value="cerrar"> 
+    <form action="pedidos.html">
+        <input type="submit" value="cerrar"> 
+    </form>
+
 </body>
 
 </html>
