--- a/Sprint2/HMTL/index.html
+++ b/Sprint2/HMTL/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Inicio de sesión</title>
 </head>
 
 <body>
   <h2>Sistema Web de Pedidos</h2>
-  <p>Aqui podra iniciar sessión con su usuario de cliente o administrador. Este es un proyecto de Ciclo 3 - MisionTic
+  <p>Aqui podra iniciar sesión con su usuario de cliente o administrador. Este es un proyecto de Ciclo 3 - MisionTic
     2022</p>
   <form action="/action_page.php">
     <fieldset style="margin:100px; text-align:center;">
@@ -18,7 +18,7 @@
       <input type="text" id="fname" name="fname"><br>
       <label for="pwd">Contraseña:</label><br>
       <input type="password" id="pwd" name="pwd"><br><br>
-      <a href="/principal.html">Ingresar</a>
+      <a href="principal.html">Ingresar</a>
     </fieldset>
   </form>
 </body>
