--- a/Sprint2/HMTL/crearpedido.html
+++ b/Sprint2/HMTL/crearpedido.html
@@ -1,33 +1,36 @@
-<!--Creación html para crear pedido-->
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Crear Pedido</title>
-  </head>
-  <body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Productos</title>
+</head>
+
+<body>
     <div style="clear: both">
-      <img src="img/logo_pedidos.png" alt="img/no-image.png" width="120" height="60" style="float: left">
-      <h1 style="text-align:center">RappiPedidosGrp5</h1>
-    </div>
-    <br>
-    <br>
-    <ul>
-      <li><a href="principal.html">Principal</a></li>
-      <li><a href="#">Usuario</a></li>
-      <li><a href="#">Producto</a></li>
-      <li>Pedido
-          <ul>
-              <li><a href="pedidos.html">Pedido</a></li>
-              <li><a href="crearpedido.html">Crear Pedido</a></li>
-              <li><a href="modificarpedido.html">Modificar Pedido</a></li>
-              <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
-              <li><a href="consultaReporte.html">Reporte Pedido</a></li>
-          </ul>
-      </li>
-  </ul>
+        <img src="img/logo_pedidos.png" alt="img/no-image.png" width="120" height="60" style="float: left">
+        <h1 style="text-align:center">RappiPedidosGrp5</h1>
+      </div>
+      <br>
+      <br>
+      <nav class="navegacion">
+        <ul class="menu">
+            <li><a href="principal.html">Principal</a></li>
+            <li><a href="creaciondeusu.html">Usuario</a></li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a href="pedidos.html">Pedidos</a>
+                <ul class="submenu">
+                    <li><a href="crearpedido.html">Crear Pedido</a></li>
+                    <li><a href="modificarpedido.html">Modificar Pedido</a></li>
+                    <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
+                    <li><a href="consultaReporte.html">Reporte Pedido</a></li>
+                </ul>
+            </li>
+        </ul>
+      </nav>
+
     <h2>Creación de pedido</h2>
     <div>
       <form action="#">
@@ -121,10 +124,13 @@
       <br />
       <label for="total">Total:</label>
       <input type="text" id="total" name="total" disabled />
+    </div>
       <br /><br />
       <input type="submit" value="Imprimir" />
       <input type="submit" value="Crear Pedido" />
-      <input type="submit" value="Cancelar Pedido" />
-    </div>
+      <form action="pedidos.html">
+        <input type="submit" value="Cancelar Pedido" />
+      </form>
+    
   </body>
 </html>
