--- a/Sprint2/HMTL/pedidos.html
+++ b/Sprint2/HMTL/pedidos.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <div style="clear: both">
-    <img src="img/logo_pedidos.png" alt="img/no-image.png" width="120" height="60" style="float: left">
-    <h1 style="text-align:center">RappiPedidosGrp5</h1>
-  </div>
-  <br>
-  <br>
-  <ul>
-    <li><a href="principal.html">Principal</a></li>
-    <li><a href="#">Usuario</a></li>
-    <li><a href="#">Producto</a></li>
-    <li>Pedido
-        <ul>
-            <li><a href="pedidos.html">Pedido</a></li>
-            <li><a href="crearpedido.html">Crear Pedido</a></li>
-            <li><a href="modificarpedido.html">Modificar Pedido</a></li>
-            <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
-            <li><a href="consultaReporte.html">Reporte Pedido</a></li>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Productos</title>
+</head>
+
+<body>
+    <div style="clear: both">
+        <img src="img/logo_pedidos.png" alt="img/no-image.png" width="120" height="60" style="float: left">
+        <h1 style="text-align:center">RappiPedidosGrp5</h1>
+      </div>
+      <br>
+      <br>
+      <nav class="navegacion">
+        <ul class="menu">
+            <li><a href="principal.html">Principal</a></li>
+            <li><a href="creaciondeusu.html">Usuario</a></li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a href="pedidos.html">Pedidos</a>
+                <ul class="submenu">
+                    <li><a href="crearpedido.html">Crear Pedido</a></li>
+                    <li><a href="modificarpedido.html">Modificar Pedido</a></li>
+                    <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
+                    <li><a href="consultaReporte.html">Reporte Pedido</a></li>
+                </ul>
+            </li>
         </ul>
-    </li>
-</ul>
+      </nav>
+
   <body>
     <h2>Listado de Ordenes de Pedido</h2>
     <div>
@@ -45,7 +50,9 @@
           <td>Pendiente</td>
           <td>$475,000</td>
           <td>
-            <input type="submit" value="Modificar" />
+            <form action="modificarpedido.html">
+              <input type="submit" value="Modificar" />
+            </form>
             <input type="submit" value="Eliminar" />
           </td>
         </tr>
