--- a/Sprint2/HMTL/principal.html
+++ b/Sprint2/HMTL/principal.html
@@ -2,32 +2,34 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RappiPedidosGrp5</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Productos</title>
 </head>
+
 <body>
-  <div style="clear: both">
-    <img src="img/logo_pedidos.png" alt="img/no-image.png" width="120" height="60" style="float: left">
-    <h1 style="text-align:center">RappiPedidosGrp5</h1>
-  </div>
-  <br>
-  <br>
-  <ul>
-    <li><a href="principal.html">Principal</a></li>
-    <li><a href="#">Usuario</a></li>
-    <li><a href="#">Producto</a></li>
-    <li>Pedido
-        <ul>
-            <li><a href="pedidos.html">Pedido</a></li>
-            <li><a href="crearpedido.html">Crear Pedido</a></li>
-            <li><a href="modificarpedido.html">Modificar Pedido</a></li>
-            <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
-            <li><a href="consultaReporte.html">Reporte Pedido</a></li>
+    <div style="clear: both">
+        <img src="img/logo_pedidos.png" alt="img/no-image.png" width="120" height="60" style="float: left">
+        <h1 style="text-align:center">RappiPedidosGrp5</h1>
+      </div>
+      <br>
+      <br>
+      <nav class="navegacion">
+        <ul class="menu">
+            <li><a href="principal.html">Principal</a></li>
+            <li><a href="creaciondeusu.html">Usuario</a></li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a href="pedidos.html">Pedidos</a>
+                <ul class="submenu">
+                    <li><a href="crearpedido.html">Crear Pedido</a></li>
+                    <li><a href="modificarpedido.html">Modificar Pedido</a></li>
+                    <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
+                    <li><a href="consultaReporte.html">Reporte Pedido</a></li>
+                </ul>
+            </li>
         </ul>
-    </li>
-</ul>
+      </nav>
   <!-- <nav>
     <p><a href="principal.html">Principal</a> | <a href="#">Usuario</a> | <a href="#">Producto</a> | <a href="pedidos.html">Pedido</a></p>
   </nav> -->
