Se adiciona CSS

--- a/Sprint3/HMTL/index.html
+++ b/Sprint3/HMTL/index.html
@@ -5,10 +5,37 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio de sesión</title>
+  <link rel="stylesheet" href="css/estilos.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;500;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&family=Seymour+One&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Varela&display=swap"
+      rel="stylesheet"
+    />
 </head>
 
 <body>
-  <h2>Sistema Web de Pedidos</h2>
+
+  <header>
+    <div class="ancho">
+      <div class="logo">
+        <img src="img/logo_pedidos.png" alt="" />
+      </div>
+
+      <h1>RappiPedidosGrp5</h1>
+
+      <nav class="navegacion">
+        
+      </nav>
+    </div>
+  </header>
+
   <p>Aqui podra iniciar sesión con su usuario de cliente o administrador. Este es un proyecto de Ciclo 3 - MisionTic
     2022</p>
   <form action="/action_page.php">
