--- a/Sprint3/HMTL/index.html
+++ b/Sprint3/HMTL/index.html
@@ -44,9 +44,9 @@
       <fieldset>
         <legend>Inicio de sesión:</legend>
         <label for="fname">Usuario:</label><br />
-        <input type="text" id="fname" name="fname" /><br />
+        <input type="text" id="fname" name="fname" placeholder="Escribir el usuario" /><br />
         <label for="pwd">Contraseña:</label><br />
-        <input type="password" id="pwd" name="pwd" /><br /><br />
+        <input type="password" id="pwd" name="pwd" placeholder="Escribir la contraseña"  /><br /><br />
         <a class="btninicio" href="principal.html">Ingresar</a>
       </fieldset>
     </form>
