--- a/Sprint3/HMTL/pedidos.html
+++ b/Sprint3/HMTL/pedidos.html
@@ -18,7 +18,10 @@
       href="https://fonts.googleapis.com/css2?family=Varela&display=swap"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/eff4ab0e98.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/eff4ab0e98.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
