--- a/Sprint3/HMTL/creaciondeusu.html
+++ b/Sprint3/HMTL/creaciondeusu.html
@@ -5,37 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Creación de Usuario</title>
+    <link rel="stylesheet" href="css/estilos.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;500;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&family=Seymour+One&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Varela&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
-    <div style="clear: both">
-      <img
-        src="img/logo_pedidos.png"
-        alt="img/no-image.png"
-        width="120"
-        height="60"
-        style="float: left"
-      />
-      <h1 style="text-align: center">RappiPedidosGrp5</h1>
-    </div>
-    <br />
-    <br />
-    <nav class="navegacion">
-      <ul class="menu">
-        <li><a href="principal.html">Principal</a></li>
-        <li><a href="creaciondeusu.html">Usuario</a></li>
-        <li><a href="productos.html">Productos</a></li>
-        <li>
-          <a href="pedidos.html">Pedidos</a>
-          <ul class="submenu">
-            <li><a href="crearpedido.html">Crear Pedido</a></li>
-            <li><a href="modificarpedido.html">Modificar Pedido</a></li>
-            <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
-            <li><a href="consultaReporte.html">Reporte Pedido</a></li>
+    <header>
+      <div class="ancho">
+        <div class="logo">
+          <img src="img/logo_pedidos.png" alt="" />
+        </div>
+
+        <h1>RappiPedidosGrp5</h1>
+
+        <a href="index.html" class="btn">Cerrar Sesión</a>
+
+        <nav class="navegacion">
+          <ul class="menu">
+            <li><a href="principal.html">Principal</a></li>
+            <li><a href="creaciondeusu.html">Usuario</a></li>
+            <li><a href="productos.html">Productos</a></li>
+            <li>
+              <a href="pedidos.html">Pedidos</a>
+              <ul class="submenu">
+                <li><a href="crearpedido.html">Crear Pedido</a></li>
+                <li><a href="modificarpedido.html">Modificar Pedido</a></li>
+                <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
+                <li><a href="consultaReporte.html">Reporte Pedido</a></li>
+              </ul>
+            </li>
           </ul>
-        </li>
-      </ul>
-    </nav>
+        </nav>
+      </div>
+    </header>
 
     <div>
       <form action="#">
